--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-GlobalDefaultGameMode=/Game/BP_MyGameModeEcho.BP_MyGameModeEcho_C
+GlobalDefaultGameMode=/Game/BP_EchoGameMode.BP_EchoGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
